--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,20 @@
 name = "navsphere"
-compatibility_date = "2024-12-03"
+compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = ".vercel/output/static"
+
+[build]
+command = "pnpm build"
+
+[env.production]
+GITHUB_ID = ""
+GITHUB_SECRET = ""
+GITHUB_OWNER = ""
+GITHUB_REPO = ""
+GITHUB_BRANCH = "main"
+NEXTAUTH_URL = "https://your-domain.com"
+NEXTAUTH_SECRET = ""
+
+[[routes]]
+pattern = "/api/auth/.*"
+zone_name = "your-domain.com"
+custom_domain = true
