--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # GitHub OAuth App 配置
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=your-github-id
+GITHUB_SECRET=your-github-secret
 
 # GitHub 组织和仓库配置
 GITHUB_ORG=
@@ -10,4 +10,4 @@ GITHUB_BRANCH=main
 
 # NextAuth 配置
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET= 
+NEXTAUTH_SECRET=your-secret-here
