--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
+    "@auth/core": "^0.18.1",
+    "@auth/nextjs": "0.0.0-380f8d56",
     "@hello-pangea/dnd": "^17.0.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -31,6 +33,7 @@
     "cmdk": "^1.0.4",
     "lucide-react": "^0.462.0",
     "next": "13.4.12",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
