--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,12 @@
 # GitHub OAuth App 配置
-GITHUB_ID=your-github-id
-GITHUB_SECRET=your-github-secret
+GITHUB_ID=your-github-client-id
+GITHUB_SECRET=your-github-client-secret
 
-# GitHub 组织和仓库配置
-GITHUB_ORG=
-GITHUB_OWNER=
-GITHUB_REPO=
+# GitHub 仓库配置
+GITHUB_OWNER=your-github-username
+GITHUB_REPO=your-repo-name
 GITHUB_BRANCH=main
 
 # NextAuth 配置
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-here
+NEXTAUTH_SECRET=your-nextauth-secret
