--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
-    "@auth/core": "^0.18.1",
-    "@auth/nextjs": "0.0.0-380f8d56",
     "@hello-pangea/dnd": "^17.0.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -31,15 +29,21 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.462.0",
     "next": "13.4.12",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "punycode": "^2.3.1",
+    "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@radix-ui/react-icons": "^1.3.2",
