--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
+    "@auth/core": "^0.37.4",
     "@hello-pangea/dnd": "^17.0.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -26,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-table": "^8.20.5",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
@@ -42,8 +44,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.3",
-    "util": "^0.12.5",
-    "buffer": "^6.0.3"
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@radix-ui/react-icons": "^1.3.2",
