--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-table": "^8.20.5",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
     "crypto-browserify": "^3.12.1",
     "encoding": "^0.1.13",
+    "https-browserify": "^1.0.0",
     "lucide-react": "^0.462.0",
     "next": "13.4.12",
     "next-auth": "^4.24.5",
@@ -42,9 +45,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shadcn-ui": "^0.9.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "url": "^0.11.3",
+    "url": "^0.11.4",
     "util": "^0.12.5"
   },
   "devDependencies": {
@@ -59,5 +64,8 @@
     "postcss": "8.4.27",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "browser": {
+    "crypto": false
   }
 }
