--- a/package.json
+++ b/package.json
@@ -33,13 +33,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
+    "critters": "^0.0.25",
     "crypto-browserify": "^3.12.1",
     "encoding": "^0.1.13",
+    "events": "^3.3.0",
     "https-browserify": "^1.0.0",
     "lucide-react": "^0.462.0",
     "next": "13.4.12",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "punycode": "^2.3.1",
     "querystring": "^0.2.1",
     "react": "18.2.0",
