--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,10 +5,29 @@ compatibility_date = "2024-01-01"
 command = "pnpm build"
 
 [env.production]
-GITHUB_ID=Ov23lig3bTXpZHrPO1c8
-GITHUB_SECRET=5895e0a49d35b3fc70f6541b876aebdb212c0201
-GITHUB_OWNER=tianyaxiang
-GITHUB_REPO=navsphere-data
-GITHUB_BRANCH=main
-NEXTAUTH_URL=https://navsphere.pages.dev/api/auth
-NEXTAUTH_SECRET=PlMaZe+bbYzqSw4M+855b83Py2pVU9s4drWKSXkh0G4= 
+GITHUB_ID = "Ov23lig3bTXpZHrPO1c8"
+GITHUB_SECRET = "5895e0a49d35b3fc70f6541b876aebdb212c0201"
+GITHUB_OWNER = "tianyaxiang"
+GITHUB_REPO = "navsphere-data"
+GITHUB_BRANCH = "main"
+NEXTAUTH_URL = "https://navsphere.pages.dev"
+NEXTAUTH_SECRET = "PlMaZe+bbYzqSw4M+855b83Py2pVU9s4drWKSXkh0G4="
+
+[[routes]]
+pattern = "/api/auth/.*"
+zone_name = "navsphere.pages.dev"
+custom_domain = true
+
+[[routes]]
+pattern = "/*"
+zone_name = "navsphere.pages.dev"
+custom_domain = true
+[[routes]]
+pattern = "/api/auth/.*"
+zone_name = "navsphere.pages.dev"
+custom_domain = true
+
+[[routes]]
+pattern = "/*"
+zone_name = "navsphere.pages.dev"
+custom_domain = true
