--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
 name = "navsphere"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = ".vercel/output/static"
 
 [build]
 command = "pnpm build"
