优化后台框架

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,14 @@ name = "navsphere"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
+
+
+
+[env.production]
+GITHUB_ID = "Ov23lig3bTXpZHrPO1c8"
+GITHUB_SECRET = "5895e0a49d35b3fc70f6541b876aebdb212c0201"
+GITHUB_OWNER = "tianyaxiang"
+GITHUB_REPO = "navsphere"
+GITHUB_BRANCH = "auth"
+NEXTAUTH_URL = "https://navsphere.pages.dev/api/auth/"
+NEXTAUTH_SECRET = "ea05404d0bcef4ed77700e7fd53e7ccd"
