--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sonner": "^1.7.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
