--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "14.0.4",
     "postcss": "8.4.27",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
