--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
+    "@monaco-editor/react": "^4.7.0",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -60,6 +61,7 @@
     "input-otp": "^1.4.1",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.462.0",
+    "monaco-editor": "^0.52.2",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.2.1",
