--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ GITHUB_REPO=your-repo-name
 GITHUB_BRANCH=main
 
 # NextAuth 配置
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-nextauth-secret
+NEXTAUTH_URL=http://localhost:3000/api/auth
+NEXTAUTH_SECRET=PlMaZe+bbYzqSw4M+855b83Py2pVU9s4drWKSXkh0Gqwe4=
+NEXT_PUBLIC_API_URL=http://localhost:3000 
