--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf .next"
+    "clean": "rm -rf .next",
+    "docker:build": "docker build -f docker/Dockerfile -t navsphere:latest .",
+    "docker:dev": "docker-compose -f docker/docker-compose.yml up -d",
+    "docker:prod": "docker-compose -f docker/docker-compose.prod.yml up -d",
+    "docker:stop": "docker-compose -f docker/docker-compose.yml down",
+    "docker:logs": "docker-compose -f docker/docker-compose.yml logs -f",
+    "docker:deploy": "./scripts/docker-deploy.sh"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
